<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">青芒果酒店预订</string>
    <string name="alert_must_update_new_version">检测到新版本，请下载安装才能继续使用</string>
    <string name="new_version">版本升级</string>
    <string name="new_update_ready">检测到有最新版本，请下载</string>
    <string name="analysis_ver_error">解析版本Ver出错-></string>
    <string name="download_ver_error">下载新版本出错-></string>
    <string name="updating">下载apk,更新</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="download_new_ok">下载完成</string>
    <string name="qmango_download_new_ok">文件已下载完成</string>
    <string name="begin_to_download">开始下载</string>
    <string name="download_progress">已下载0%</string>
    <string name="please_perfect_inquires">请完善查询条件</string>
    <string name="memorycard_is_unavailable">内存卡不可用，下载已取消！</string>
    <string name="login_can_enjoy_preferential">注册登录尽享红包优惠！</string>
    <string name="comment_person">青芒果会员</string>
    <string name="check_in_city">目的地</string>
    <string name="my_location">所在地</string>
    <string name="choose_check_in_city">城市列表</string>
    <string name="fast_inquires">简写/全拼/中文</string>
    <string name="current_position">当前位置</string>
    <string name="check_in_date">入住日期</string>
    <string name="departure_date">离店日期</string>
    <string name="key_word">关键字</string>
    <string name="hotel_inquires">查询酒店</string>
    <string name="key_word_tip">酒店名、地址等</string>
    <string name="is_null">暂时没有该记录</string>
    <string name="popular_city">热</string>
    <string name="hot_city">热门城市</string>
    <string name="qmango">青芒果</string>
    <string name="nearby_hotels">周边酒店</string>
    <string name="hotel_details">酒店详情</string>
    <string name="hotel_room_book">立即预订</string>
    <string name="hotel_all_rooms">酒店房型</string>
    <string name="hotel_praise">好评度</string>
    <string name="newest_comment">最新点评：</string>
    <string name="check_out_all_room">显示全部房型▼</string>
    <string name="pack_up_some_room">收起▲</string>
    <string name="comments_count">%s条点评</string>
    <string name="hotel_images">酒店图片</string>
    <string name="hotel_details_rooms">房型</string>
    <string name="hotel_details_comments">评论</string>
    <string name="hotel_details_images">图片</string>
    <string name="hotel_details_map">周边</string>
    <string name="review_cash_back">预订减%1$s元，点评返%2$s元</string>
    <string name="review_cash_back_introduction">入住后点评，即可获得%s元的现金返还。</string>
    <string name="room_type_desc">房间描述：</string>
    <string name="room_other_facilities">房间设施：</string>
    <string name="breakfast">早餐</string>
    <string name="conditioning">空调</string>
    <string name="bathroom">独卫</string>
    <string name="room_internet">宽带</string>
    <string name="tv">电视</string>
    <string name="tel">电话</string>
    <string name="room_is">是</string>
    <string name="room_have">有</string>
    <string name="room_none">无</string>
    <string name="no_breakfast">不含早</string>
    <string name="net_none">无</string>
    <string name="hotel_display_introduction">简介</string>
    <string name="grade_score">%s分</string>
    <string name="room_details">详细</string>
    <string name="start_to_end">至</string>
    <string name="user_phone_number">手机：</string>
    <string name="user_password">密\u0009\u0009码</string>
    <string name="user_account">帐\u0009\u0009号</string>
    <string name="remember_pwd">自动登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="loginout">注销</string>
    <string name="please_input_your_account">手机号/卡号/邮箱</string>
    <string name="please_input_your_phone_number">请输入您的手机号码</string>
    <string name="please_input_your_pwd">请输入您的密码</string>
    <string name="register_now">免费注册>></string>
    <string name="forgot_password">找回密码>></string>
    <string name="sure_to_logout">您确定要注销吗？</string>
    <string name="non_member_order_inquires">订单快速查询</string>
    <string name="non_member_order_inquires_error">您输入的手机号或者订单号有误，请重新输入。</string>
    <string name="phone_number_is_invalid">请输入您的账号</string>
    <string name="pwd_is_null">请输入密码</string>
    <string name="Sunday">周日</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="today">今日</string>
    <string name="back_to_this_month">返回本月</string>
    <string name="network_error">网络好像有点困难，你懂的。</string>
    <string name="result_error">取到的数据不能解析，网络不稳定，请稍后重试</string>
    <string name="please_wait">查询中，请稍候……</string>
    <string name="hotel_inquiring">酒店查询</string>
    <string name="hotel_inquires_is_null">您好，该酒店已满房或暂时没有符合您要求的酒店，请您修改条件重新搜索。</string>
    <string name="list_map_mode">列表/地图</string>
    <string name="hotel_inquires_results">酒店结果</string>
    <string name="gps_is_not_able_to_use">小芒果正在努力定位您的所在地，请稍候再试。</string>
    <string name="loading_tips">小芒果正在努力加载中……</string>
    <string name="long_press_map">长按地图即可搜索周边酒店</string>
    <string name="check_in_and_departure_time">入住：%1$s 离店：%2$s</string>
    <string name="hotels_count">共%s家</string>
    <string name="screen_by_price">价格</string>
    <string name="screen_by_grade">评分</string>
    <string name="screen_by_distance">距离</string>
    <string name="hotel_grade">%s分</string>
    <string name="hotel_low_price">￥%s起</string>
    <string name="inquiring">查询中……</string>
    <string name="inquires_more">更多</string>
    <string name="need_more">更多</string>
    <string name="need_more_hotels">更多酒店</string>
    <string name="objective_city">目的城市</string>
    <string name="distance_is_null">距离不详</string>
    <string name="screen">筛选</string>
    <string name="sort">排序</string>
    <string name="map_mode">地图</string>
    <string name="list_mode">列表</string>
    <string name="center_point">中心点</string>
    <string name="sort_by_price">价格从低到高</string>
    <string name="sort_by_grade">评分从高到低</string>
    <string name="sort_by_distance">距离由近到远</string>
    <string name="screen_is_null">暂无可供选择的筛选区域。</string>
    <string name="all_areas">全部</string>
    <string name="screen_class">类别</string>
    <string name="screen_area">区域</string>
    <string name="reset">重置</string>
    <string name="http_error">HttpGet请求失败</string>
    <string name="around">酒店周边</string>
    <string name="my_position">我的位置</string>
    <string name="around_is_null">抱歉，未找到结果</string>
    <string name="around_tel">电话：</string>
    <string name="poi_catering">餐厅</string>
    <string name="poi_park">公园</string>
    <string name="poi_traffic">车站</string>
    <string name="booking_date_got_pushed_back_a_day">友情提示：青芒果预订日期，默认为当天的第二天，确保到店有房。</string>
    <string name="shake_friendship_prompt">摇一摇手机即可查询周边酒店</string>
    <string name="shake_not_support">设备不支持摇一摇功能。</string>
    <string name="beijing">北京</string>
    <string name="hotel_order_details">订单详情</string>
    <string name="check_in_people_txt">入住人</string>
    <string name="check_in_people_name">入住人姓名</string>
    <string name="people_name_is_null">请输入入住人姓名</string>
    <string name="check_in_people_phone">入住人手机</string>
    <string name="people_phone_is_null">请输入入住人有效手机号</string>
    <string name="please_advance_deposit">请预付订金</string>
    <string name="book_hotel_name">入住酒店：</string>
    <string name="book_hotel_date">入住日期：</string>
    <string name="book_hotel_room">入住房型：</string>
    <string name="book_hotel_room_nights">间数：</string>
    <string name="book_hotel_address">酒店地址：</string>
    <string name="book_hotel_contact_phone">酒店前台电话：</string>
    <string name="time_to_time">至</string>
    <string name="room_nights">%s间</string>
    <string name="pay_now">立即支付</string>
    <string name="pay_at_the_hotel">前台支付：￥%S</string>
    <string name="pay">支付</string>
    <string name="submit_order">支付并提交订单</string>
    <string name="latest_time">最晚到店：</string>
    <string name="check_in_days">（共%s晚）</string>
    <string name="around_no_hotel">抱歉，周边没有找到酒店。</string>
    <string name="checkin_time_late">最晚到店</string>
    <string name="string_FileUtil_EventHandler_memorycard_is_unavailable">内存卡不可用！</string>
    <string name="advance_deposit">预付订金</string>
    <string name="qmango_pioneering_mode">*青芒果首创订金预付模式，价格更低，确保到店有房。</string>
    <string name="hotel_order_price">本单费用：￥%s</string>
    <string name="hotel_order_real_price">实际费用：￥%s</string>
    <string name="pay_a_deposit_to_the_qmango">现在需支付订金：￥%1$s</string>
    <string name="lijian_price">已立减%1$s元</string>
    <string name="pay_at_hotel_price">到酒店前台支付：￥%s</string>
    <string name="hotel_order_price_default">本单费用：</string>
    <string name="pay_a_deposit_to_the_qmango_default">现在需支付订金：</string>
    <string name="pay_at_hotel_price_default">到酒店前台支付：</string>
    <string name="man">男</string>
    <string name="female">女</string>
    <string name="mobile_is_exist">您的手机已注册,请登录后再进行预订。</string>
    <string name="login_to_order_fail">登录失败，账号或者密码有误，请重新登录。</string>
    <string name="non_member_order">非会员直接预订</string>
    <string name="hotel_info">酒店信息</string>
    <string name="hotel_traffic">酒店交通</string>
    <string name="hotel_facilities_services">设施服务</string>
    <string name="hotel_surrounded_tourist_spots">周边标志和旅游点</string>
    <string name="hotel_introduction">酒店介绍</string>
    <string name="hotel_comment">酒店点评</string>
    <string name="qmango_vip">青芒果会员</string>
    <string name="user_comment">卫生服务环境不错，交通亦便利，很好！</string>
    <string name="show_more_comments">查看更多点评</string>
    <string name="no_comments">暂无点评！</string>
    <string name="no_images">暂无图片！</string>
    <string name="recommend_yes">我推荐</string>
    <string name="recommend_no">不推荐</string>
    <string name="total_comment">总体评价：</string>
    <string name="hotel_reservation">预订完成</string>
    <string name="hotel_reservation_success">恭喜，您的订单%s已经完成！</string>
    <string name="order_hotel_info_text">酒店信息</string>
    <string name="register_phone">手机号码</string>
    <string name="please_input_phone_number">请输入有效的手机号码</string>
    <string name="register_pwd">登录密码</string>
    <string name="please_input_pwd">请输入密码（至少4位）</string>
    <string name="register_pwd_again">确认密码</string>
    <string name="please_input_pwd_again">请再次输入密码</string>
    <string name="register_email">电子邮箱</string>
    <string name="please_input_email">请输入您的邮箱</string>
    <string name="user_register">用户注册</string>
    <string name="get_back_password">找回密码</string>
    <string name="get_back_pwd">发送到手机</string>
    <string name="get_pwd_tips">"输入注册或填写订单时留下的手机号码
找回密码每天最多3次"</string>
    <string name="my_coupons">优惠券激活</string>
    <string name="please_input_coupons_num">请输入您的优惠券代码</string>
    <string name="coupons_tips">"1.本优惠代码仅限青芒果使用，可等值现金用于本公司支付任何预付费用。
2.本次优惠代码充值有效日期为截止日期，过期无效。
3.本次优惠代码充值金不可在多个账号内互转，不可兑换现金。
4.优惠代码最终解释权归青芒果所有。"</string>
    <string name="coupons_num">优惠券代码</string>
    <string name="coupons_activation">马上激活</string>
    <string name="story_dialog_tittle">请输入story参数</string>
    <string name="source">source:</string>
    <string name="source_hint">Input Source</string>
    <string name="commit">Commit</string>
    <string name="use_default">Use Default</string>
    <string name="act">act:</string>
    <string name="pics">pics:</string>
    <string name="pics_hint">Input pics url</string>
    <string name="title">title:</string>
    <string name="title_hint">Input story title</string>
    <string name="description">description:</string>
    <string name="description_hint">Input description</string>
    <string name="summary">summary:</string>
    <string name="summary_hint">Input summary</string>
    <string name="type">type:</string>
    <string name="type_hint">Input type</string>
    <string name="playurl">playurl:</string>
    <string name="playurl_hint">Input playurl</string>
    <string name="openid_hint">Input openid</string>
    <string name="openid">receiver:</string>
    <string name="add_openid">click to add</string>
</resources>