<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/getpwd_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" android:textColor="#ffffffff" android:gravity="center" android:background="@drawable/top_bg" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/get_back_password" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="12.0dip">
        <EditText android:textSize="16.0sp" android:textColor="@color/black" android:gravity="left|center" android:id="@id/get_pwd_phone" android:background="@drawable/action_input_bg_normal" android:paddingLeft="110.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/please_input_your_phone_number" android:singleLine="true" android:inputType="phone" />
        <TextView android:textSize="20.0sp" android:textColor="@color/black" android:gravity="center" android:paddingLeft="10.0dip" android:layout_width="110.0dip" android:layout_height="fill_parent" android:text="@string/register_phone" android:layout_alignTop="@id/get_pwd_phone" android:layout_alignBottom="@id/get_pwd_phone" />
    </RelativeLayout>
    <Button android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/get_back_pwd_btn" android:background="@drawable/user_memeber_btn_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:text="@string/get_back_pwd" />
    <TextView android:textSize="16.0sp" android:textColor="#ff999999" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="12.0dip" android:text="@string/get_pwd_tips" />
</LinearLayout>
