<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/coupons_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:background="@drawable/top_bg" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/my_coupons" />
    <RelativeLayout android:background="@drawable/action_input_bg_normal" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginLeft="12.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="12.0dip">
        <EditText android:textSize="14.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@id/coupons_activation_num" android:background="@null" android:paddingLeft="110.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/please_input_coupons_num" android:singleLine="true" android:inputType="number" />
        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:paddingLeft="10.0dip" android:layout_width="100.0dip" android:layout_height="fill_parent" android:text="@string/coupons_num" android:layout_alignTop="@id/coupons_activation_num" android:layout_alignBottom="@id/coupons_activation_num" />
    </RelativeLayout>
    <Button android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/coupons_activation_btn" android:background="@drawable/user_memeber_btn_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="12.0dip" android:layout_marginBottom="12.0dip" android:text="@string/coupons_activation" />
    <TextView android:textSize="14.0sp" android:textColor="#ff999999" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="12.0dip" android:text="@string/coupons_tips" />
</LinearLayout>
