<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/register_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" android:textColor="#ffffffff" android:gravity="center" android:background="@drawable/top_bg" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/user_register" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:background="@drawable/action_input_bg_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="12.0dip">
                <EditText android:textSize="16.0sp" android:textColor="@color/black" android:ellipsize="end" android:gravity="left|center" android:id="@id/register_phone_et" android:background="@null" android:paddingLeft="110.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/please_input_phone_number" android:singleLine="true" android:inputType="phone" />
                <TextView android:textSize="18.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/register_user_phone" android:paddingLeft="10.0dip" android:layout_width="100.0dip" android:layout_height="fill_parent" android:text="@string/register_phone" android:layout_alignTop="@id/register_phone_et" android:layout_alignBottom="@id/register_phone_et" />
                <TextView android:id="@id/register_cut_line_top1" android:background="@color/cut_line_top" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_below="@id/register_phone_et" />
                <TextView android:id="@id/register_cut_line_bottom1" android:background="@color/cut_line_bottom" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_below="@id/register_cut_line_top1" />
                <EditText android:textSize="16.0sp" android:textColor="@color/black" android:ellipsize="end" android:gravity="left|center" android:id="@id/register_pwd_et" android:background="@null" android:paddingLeft="110.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/please_input_pwd" android:password="true" android:singleLine="true" android:layout_below="@id/register_cut_line_bottom1" />
                <TextView android:textSize="18.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/register_pwd" android:paddingLeft="10.0dip" android:layout_width="100.0dip" android:layout_height="fill_parent" android:text="@string/register_pwd" android:layout_alignTop="@id/register_pwd_et" android:layout_alignBottom="@id/register_pwd_et" />
                <TextView android:id="@id/register_cut_line_top2" android:background="@color/cut_line_top" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_below="@id/register_pwd" />
                <TextView android:id="@id/register_cut_line_bottom2" android:background="@color/cut_line_bottom" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_below="@id/register_cut_line_top2" />
                <EditText android:textSize="16.0sp" android:textColor="@color/black" android:ellipsize="end" android:gravity="left|center" android:id="@id/register_pwd_again_et" android:background="@null" android:paddingLeft="110.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="5.0dip" android:hint="@string/please_input_pwd_again" android:password="true" android:singleLine="true" android:layout_below="@id/register_cut_line_bottom2" />
                <TextView android:textSize="18.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/register_pwd_again" android:paddingLeft="10.0dip" android:layout_width="100.0dip" android:layout_height="fill_parent" android:text="@string/register_pwd_again" android:layout_alignTop="@id/register_pwd_again_et" android:layout_alignBottom="@id/register_pwd_again_et" />
                <ImageView android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/full_line" android:layout_below="@id/register_pwd_again_et" />
                <EditText android:textSize="14.0sp" android:ellipsize="end" android:gravity="left|center" android:id="@id/register_email_et" android:background="@null" android:paddingLeft="110.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="5.0dip" android:hint="@string/please_input_email" android:ems="10" android:singleLine="true" android:layout_below="@id/register_pwd_again_et" android:inputType="textEmailAddress">
                    <requestFocus />
                </EditText>
                <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/register_email" android:visibility="gone" android:layout_width="100.0dip" android:layout_height="fill_parent" android:text="@string/register_email" android:layout_alignLeft="@id/register_pwd_again" android:layout_alignTop="@id/register_email_et" android:layout_alignBottom="@id/register_email_et" />
            </RelativeLayout>
            <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip">
                <Button android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/sure_register" android:background="@drawable/user_memeber_btn_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ok" />
                <Button android:textSize="16.0sp" android:textColor="@color/grayblack" android:id="@id/cancel" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
