<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:minWidth="280.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/alertIcon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/infoicon" />
        <TextView android:textSize="24.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/alertTitle" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/new_version" />
    </LinearLayout>
    <ImageView android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/full_line" />
    <TextView android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/alertContent" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/new_update_ready" />
    <LinearLayout android:orientation="horizontal" android:background="@color/grayblack" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="18.0sp" android:id="@id/update_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ok" android:layout_weight="1.0" />
        <Button android:textSize="18.0sp" android:id="@id/update_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
